fix: fixed sticky position for menu on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,7 +10,6 @@
 body, html {
   width: var(--width);
   max-width: var(--width);
-  height: 100%;
   margin: 0;
   padding: 0;
   padding-top: 20px ;
